--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mobx:
   flutter_mobx:
   get_it:
+  auto_route:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,6 +54,7 @@ dev_dependencies:
   build_runner:
   json_annotation:
   mobx_codegen:
+  auto_route_generator: 
 
 
 # For information on the generic Dart part of this file, see the
